--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <h1>hello world lol</h1>
+    <h1>hello world </h1>
 </body>
 </html>
