--- a/src/index.html
+++ b/src/index.html
@@ -77,5 +77,24 @@
             </div>
         </div>
     </div>
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">
+                Получите бесплатную консультацию <br> по подбору пульсометра 
+            </h2>
+            <div class="consultation__descr">
+                Просто заполните форму заявки <br>  и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваше E-mail" type="email">
+
+                <!-- <textarea style="resize: none;" placeholder="коментарий" name="" id="" cols="15" rows="5"></textarea> -->
+                <!-- <input type="submit" value="заказать консультацию"> -->
+                <button class="button button_submit">заказать консультацию</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
