--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,11 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <a href="" class="header__logo">
@@ -53,9 +54,9 @@
                 </div>
             </div>            
         </div>
-    </div>
+    </section>
 
-    <div class="advantage">
+    <section class="advantage">
         <div class="container">
             <div class="advantage__header">НАШИ ПРЕИМУЩЕСТВА</div>
             <div class="advantage__icons">
@@ -76,8 +77,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="consultation">
+    </section>
+    <section class="consultation">
         <div class="container">
             <h2 class="title title_left">
                 Получите бесплатную консультацию <br> по подбору пульсометра 
@@ -95,6 +96,30 @@
                 <button class="button button_submit">заказать консультацию</button>
             </form>
         </div>
-    </div>
+    </section>
+
+    <section class="carousel">
+      <div class="container">
+        <div class="carousel__inner">
+            <div>
+                <img src="img/slide_1.jpg" alt="slide">
+            </div>
+            <div>
+                <img src="img/slide_2.jpg" alt="slide">
+            </div>
+            <div>
+                <img src="img/slide_3.jpg" alt="slide">
+            </div>
+          </div>  
+      </div>      
+    </section>
+
+
+
+
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
