--- a/src/index.html
+++ b/src/index.html
@@ -140,6 +140,36 @@
       </div>      
     </section>
 
+    <section class="catalog">
+        <div class="container">
+            <h2 class="title">Каталог пульсометров</h2>
+            <ul class="catalog__tabs">
+                <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
+                <li class="catalog__tab"><div>для бега</div></li>
+                <li class="catalog__tab"><div>для триатлона</div></li>
+            </ul>
+            <div class="catalog__content">
+                <div class="catalog-item">
+                    <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
+                    <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                    <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
+                    <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    <hr>
+
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">купить</button>
+                    </div>
+                </div>
+            </div>
+            <div class="catalog__content"></div>
+            <div class="catalog__content"></div>
+        </div>
+    </section>
+
 
 
 <!-- the first way to create a slider -->
