--- a/src/index.html
+++ b/src/index.html
@@ -150,10 +150,145 @@
             </ul>
             <div class="catalog__content">
                 <div class="catalog-item">
-                    <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-                    <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
-                    <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
-                    <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content">
+                            <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
+                            <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                            <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list catalog-item__list_active">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировачных зон пульса;</li>
+                            <li> Также Вы увидите информацию  расходе калорий за тренировку; </li>
+                            <li>Вы сможите просмотреть данные по 10 тренировкам.</li>
+                        </ul>                        
+                    </div>
+                    <hr>
+
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">купить</button>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content">
+                            <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
+                            <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                            <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list catalog-item__list_active">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировачных зон пульса;</li>
+                            <li> Также Вы увидите информацию  расходе калорий за тренировку; </li>
+                            <li>Вы сможите просмотреть данные по 10 тренировкам.</li>
+                        </ul>                        
+                    </div>
+                    <hr>
+
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">купить</button>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content">
+                            <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
+                            <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                            <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list catalog-item__list_active">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировачных зон пульса;</li>
+                            <li> Также Вы увидите информацию  расходе калорий за тренировку; </li>
+                            <li>Вы сможите просмотреть данные по 10 тренировкам.</li>
+                        </ul>                        
+                    </div>
+                    <hr>
+
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">купить</button>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content">
+                            <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
+                            <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                            <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list catalog-item__list_active">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировачных зон пульса;</li>
+                            <li> Также Вы увидите информацию  расходе калорий за тренировку; </li>
+                            <li>Вы сможите просмотреть данные по 10 тренировкам.</li>
+                        </ul>                        
+                    </div>
+                    <hr>
+
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">купить</button>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content">
+                            <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
+                            <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                            <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list catalog-item__list_active">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировачных зон пульса;</li>
+                            <li> Также Вы увидите информацию  расходе калорий за тренировку; </li>
+                            <li>Вы сможите просмотреть данные по 10 тренировкам.</li>
+                        </ul>                        
+                    </div>
+                    <hr>
+
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">купить</button>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content">
+                            <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
+                            <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                            <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list catalog-item__list_active">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировачных зон пульса;</li>
+                            <li> Также Вы увидите информацию  расходе калорий за тренировку; </li>
+                            <li>Вы сможите просмотреть данные по 10 тренировкам.</li>
+                        </ul>                        
+                    </div>
                     <hr>
 
                     <div class="catalog-item__footer">
@@ -165,8 +300,85 @@
                     </div>
                 </div>
             </div>
-            <div class="catalog__content"></div>
-            <div class="catalog__content"></div>
+            <div class="catalog__content">
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content">
+                            <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
+                            <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                            <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list catalog-item__list_active">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировачных зон пульса;</li>
+                            <li> Также Вы увидите информацию  расходе калорий за тренировку; </li>
+                            <li>Вы сможите просмотреть данные по 10 тренировкам.</li>
+                        </ul>                        
+                    </div>
+                    <hr>
+
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">купить</button>
+                    </div>
+                </div>
+            </div>
+            <div class="catalog__content">
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content">
+                            <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
+                            <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                            <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list catalog-item__list_active">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировачных зон пульса;</li>
+                            <li> Также Вы увидите информацию  расходе калорий за тренировку; </li>
+                            <li>Вы сможите просмотреть данные по 10 тренировкам.</li>
+                        </ul>                        
+                    </div>
+                    <hr>
+
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">купить</button>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content">
+                            <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
+                            <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                            <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
+                            <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                        </div>
+                        <ul class="catalog-item__list catalog-item__list_active">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировачных зон пульса;</li>
+                            <li> Также Вы увидите информацию  расходе калорий за тренировку; </li>
+                            <li>Вы сможите просмотреть данные по 10 тренировкам.</li>
+                        </ul>                        
+                    </div>
+                    <hr>
+
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб.</div>
+                            <div class="catalog-item__price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_mini">купить</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
