--- a/src/index.html
+++ b/src/index.html
@@ -397,10 +397,55 @@
                         <button class="button button_mini">купить</button>
                     </div>
                 </div>
-            </div>
-           
+            </div>           
         </div>
     </section>
+
+    <section class="reviews">
+        <div class="container">
+            <h2 class="title">отзывы клиентов</h2>
+            <div class="reviews__content">
+                <div class="reviews__item">
+                    <img src="img/feed_1.png" alt="ffff" class="reviews__img">
+                    <div class="reviews__descr">
+                        <div class="reviews__header">Ирина Иванченко</div>
+                        <div class="reviews__subheader">2 полумарафона</div>
+                        <div class="reviews__text">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque sed suscipit architecto non cupiditate? Labore illo corrupti doloremque qui at repellat itaque quos consectetur in voluptatibus quisquam, incidunt distinctio possimus?<br><br>
+                            Lorem ipsum dolor sit amet consectetur <br><br>
+                            consectetur in voluptatibus quisquam 
+                        </div>                        
+                    </div>
+                </div>
+                <div class="reviews__item">
+                    <img src="img/feed_2.png" alt="ffff" class="reviews__img">
+                    <div class="reviews__descr">
+                        <div class="reviews__header">Ирина Иванченко</div>
+                        <div class="reviews__subheader">2 полумарафона</div>
+                        <div class="reviews__text">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque sed suscipit architecto non cupiditate? Labore illo corrupti doloremque qui at repellat itaque quos consectetur in voluptatibus quisquam, incidunt distinctio possimus?<br><br>
+                            Lorem ipsum dolor sit amet consectetur <br><br>
+                            consectetur in voluptatibus quisquam 
+                        </div>                        
+                    </div>
+                </div>
+                <div class="reviews__item">
+                    <img src="img/feed_3.png" alt="ffff" class="reviews__img">
+                    <div class="reviews__descr">
+                        <div class="reviews__header">Ирина Иванченко</div>
+                        <div class="reviews__subheader">2 полумарафона</div>
+                        <div class="reviews__text">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque sed suscipit architecto non cupiditate? Labore illo corrupti doloremque qui at repellat itaque quos consectetur in voluptatibus quisquam, incidunt distinctio possimus?<br><br>
+                            Lorem ipsum dolor sit amet consectetur <br><br>
+                            consectetur in voluptatibus quisquam 
+                        </div>                        
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
 
 
 
