--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74 </a>
-                    <button class="button"> заказать звонок</button>
+                    <button data-modal="consultation"class="button"> заказать звонок</button>
                 </div>
             </header>
             <div class="promo__wrapper">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
 
-                <button class="button button_main">заказать консультацию</button>
+                <button data-modal="consultation" class="button button_main">заказать консультацию</button>
                 <div class="promo__link">
                     или
                     <a href="">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -207,7 +207,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-                            <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                            <div class="catalog-item__subtitle"> Пульсометр Puron FT1 </div>
                             <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
@@ -261,7 +261,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-                            <div class="catalog-item__subtitle"> Пульсометр Suunto M2 </div>
+                            <div class="catalog-item__subtitle"> Пульсометр Puron FT1 </div>
                             <div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком </div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
@@ -458,6 +458,45 @@
             </div>
         </div>        
     </footer>
+
+    <div class="overlay">
+        <div class="modal" id="consultation">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Просто заполните форму заявки</div>
+            <div class="modal__descr"> и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form feed-form_mt25" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваше E-mail" type="email">
+
+                <!-- <textarea style="resize: none;" placeholder="коментарий" name="" id="" cols="15" rows="5"></textarea> -->
+                <!-- <input type="submit" value="заказать консультацию"> -->
+                <button class="button button_submit">заказать консультацию</button>
+            </form>
+        </div>
+
+        <div class="modal" id="order">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle"> Ваш заказ: </div>
+            <div class="modal__descr"> Пульсометр Polar FT1</div>
+            <form class="feed-form feed-form_mt25" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваше E-mail" type="email">
+
+                <!-- <textarea style="resize: none;" placeholder="коментарий" name="" id="" cols="15" rows="5"></textarea> -->
+                <!-- <input type="submit" value="заказать консультацию"> -->
+                <button class="button button_submit">Купить</button>
+            </form>
+        </div>
+
+        <div class="modal modal_mini" id="thanks">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle"> Спасибо за вашу заявку!</div>
+            <div class="modal__descr"> Наш менеджер свяжется с вами в ближайшее время</div>            
+        </div>
+
+    </div>
 
 
 
