--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
             </div>
             <form id="consultation-form" class="feed-form" action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваше E-mail" type="email">
 
                 <!-- <textarea style="resize: none;" placeholder="коментарий" name="" id="" cols="15" rows="5"></textarea> -->
@@ -466,7 +466,7 @@
             <div class="modal__descr"> и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name"  placeholder="Ваше имя" type="text">
-                <input name="phone" placeholder="Ваш телефон" type="number">
+                <input name="phone" placeholder="Ваш телефон">
                 <input name="email" placeholder="Ваше E-mail" type="email">
 
                 <!-- <textarea style="resize: none;" placeholder="коментарий" name="" id="" cols="15" rows="5"></textarea> -->
@@ -481,7 +481,7 @@
             <div class="modal__descr"> Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваше E-mail" type="email">
 
                 <!-- <textarea style="resize: none;" placeholder="коментарий" name="" id="" cols="15" rows="5"></textarea> -->
@@ -518,6 +518,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/jquery.validate.min.js"></script>
+<script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
