--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <section class="promo">
+    <section id="up" class="promo">
         <div class="container">
             <header class="header">
                 <a href="" class="header__logo">
@@ -498,7 +498,10 @@
 
     </div>
 
-
+    <a href="#up" class="pageup">
+        <img src="icons/chevron-circle-up-solid.svg" alt="chevron-circle-up">
+    </a>
+        
 
 
 <!-- the first way to create a slider -->
