--- a/src/index.html
+++ b/src/index.html
@@ -63,17 +63,17 @@
             <div class="advantage__header">НАШИ ПРЕИМУЩЕСТВА</div>
             <div class="advantage__icons">
                 <div class="advantage__icon">
-                    <img src="icons/advantages/cup.png" alt="cup">
+                    <img src="icons/advantages/cup.png" alt="cup" class="advantage__if">
                     <h2 class="advantage__subheader">Делимся опытом</h2>
                     <div class="advantage__text">Наши сотрудники всегда готовы поделиться своим опытом,  так как сами бегают полумарафоны, переплыли Босфор, готовяться к соревнованиям по триатлону!</div>
                 </div>
                 <div class="advantage__icon">
-                    <img src="icons/advantages/heart.png" alt="heart">
+                    <img src="icons/advantages/heart.png" alt="heart" class="advantage__if advantage__if_animated">
                     <h2 class="advantage__subheader">Заботимся о здоровье</h2>
                     <div class="advantage__text">Мы работаем для того,  чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим блтзким!</div>
                 </div>
                 <div class="advantage__icon">
-                    <img src="icons/advantages/shoe.png" alt="shoe">
+                    <img src="icons/advantages/shoe.png" alt="shoe" class="advantage__if">
                     <h2 class="advantage__subheader"> Учим бегать</h2>
                     <div class="advantage__text">Помогаем с обучением  правильной технике бега!  Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING</a></div>
                 </div>
