--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="css/slick.css"/> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="css/animation.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -405,7 +406,7 @@
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
             <div class="reviews__content">
-                <div class="reviews__item">
+                <div class="reviews__item fadeInUp <!-- animated --> wow" data-wow-duration="2s" data-wow-delay="1s">
                     <img src="img/feed_1.png" alt="ffff" class="reviews__img">
                     <div class="reviews__descr">
                         <div class="reviews__header">Ирина Иванченко</div>
@@ -417,7 +418,7 @@
                         </div>                        
                     </div>
                 </div>
-                <div class="reviews__item">
+                <div class="reviews__item fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
                     <img src="img/feed_2.png" alt="ffff" class="reviews__img">
                     <div class="reviews__descr">
                         <div class="reviews__header">Ирина Иванченко</div>
@@ -429,7 +430,7 @@
                         </div>                        
                     </div>
                 </div>
-                <div class="reviews__item">
+                <div class="reviews__item fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
                     <img src="img/feed_3.png" alt="ffff" class="reviews__img">
                     <div class="reviews__descr">
                         <div class="reviews__header">Ирина Иванченко</div>
@@ -522,6 +523,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/jquery.validate.min.js"></script>
 <script src="js/jquery.maskedinput.min.js"></script>
+<script src="js/wow.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
